<resources>
    <string name="app_name">FoodCastle</string>
    <string name="textview">Please Login Or Create new Account</string>
    <string name="welcomeMSG">WELCOME TO FOOD CASTLE</string>
    <string name="castle">castle</string>
    <string name="enter">ENTER</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signin">Please Sign in or Register</string>
    <string name="username">User Name:</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="newAccount">Register for new Account</string>
    <string name="accountPage">Account</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="phone">Phone Number</string>
    <string name="email">EMail</string>
    <string name="pasword">Password :</string>
    <string name="confirmpass">Confirm Password:</string>
    <string name="findtext">Find Restaurants near  you!</string>
    <string name="search">Search</string>
    <string name="american">American</string>
    <string name="italian">Italian</string>
    <string name="indian">Indian</string>
    <string name="chinese">Chinese</string>
    <string name="mexican">Mexican</string>

    <string name="proceed">SELECT</string>
    <string name="selectitem">Select Items To Order</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="mycart">Shopping Cart</string>
    <string name="chkoutBth">Proceed to Checkout</string>
    <string name="orderFrom">Your order from:</string>
    <string name="subtotal">Items subtotal:</string>
    <string name="selectPay">Select Payment Method</string>
    <string name="taxAmt">Delivery Fee:</string>
    <string name="totalAmt">Total Amount</string>
    <string name="promotional">Enter Promotional Code:</string>
    <string name="paynow">Place Order</string>
    <string name="payconfirm">Payment Confirmation</string>
    <string name="faceid">face ID</string>
    <string name="fingetPrn">Touch ID</string>
    <string name="confirm">Confirm</string>
    <string name="yourOrder">Your Payment is Confirmed. </string>
    <string name="orderStatusTxt">Order Status:</string>
    <string name="thankyou">Thank You</string>
    <string name="home1">Home</string>
    <string name="beReady">Your Order will be Ready in:</string>
</resources>
