<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodType"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".FoodTypeActivity">

    <Button
        android:id="@+id/american"
        android:layout_width="198dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"


        android:layout_marginTop="32dp"

        android:background="@drawable/star"
        android:padding="20dp"
        android:text="@string/american"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/italian"
        android:layout_width="199dp"
        android:layout_height="78dp"
        android:layout_marginStart="184dp"


        android:layout_marginTop="140dp"

        android:background="@drawable/star"
        android:padding="20dp"
        android:text="@string/italian"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/indian"
        android:layout_width="227dp"
        android:layout_height="97dp"


        android:layout_marginStart="4dp"

        android:layout_marginTop="236dp"
        android:background="@drawable/star"
        android:padding="20dp"
        android:text="@string/indian"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mexican"
        android:layout_width="227dp"
        android:layout_height="97dp"


        android:layout_marginStart="16dp"

        android:layout_marginTop="456dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/star"
        android:padding="20dp"
        android:text="@string/mexican"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chinese"
        android:layout_width="227dp"
        android:layout_height="97dp"


        android:layout_marginStart="156dp"

        android:layout_marginTop="348dp"
        android:background="@drawable/star"
        android:padding="20dp"
        android:text="@string/chinese"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>