<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">


    <Button
        android:id="@+id/signin"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="215dp"
        android:background="@drawable/border_gray"
        android:onClick="onClick"
        android:text="@string/title_activity_login"
        android:textAlignment="center"
        android:textColor="#3b5998"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@id/passwordtxt"
        app:layout_constraintTop_toTopOf="@id/passwordtxt" />

    <Button
        android:id="@+id/register"
        android:layout_width="301dp"
        android:layout_height="23dp"
        android:layout_marginTop="193dp"
        android:layout_marginBottom="78dp"
        android:background="@drawable/border_gray"
        android:onClick="onClick"
        android:text="@string/newAccount"
        android:textAlignment="center"
        android:textColor="#3b5998"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/signin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#3b5998"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="155dp"
        android:text="@string/username"
        android:textAlignment="viewStart"
        android:textColor="#3b5998"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="216dp"
        android:text="@string/pasword"
        android:textAlignment="textStart"
        android:textColor="#3b5998"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_gray"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="16dp"

        android:ems="10"
        android:inputType="textPersonName"

        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="@+id/uname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/passwordtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="34dp"

        android:ems="10"
        android:inputType="textPassword"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:background="@drawable/border_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username1"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>